--- a/terminalPortfolio-macOS/index.html
+++ b/terminalPortfolio-macOS/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>terminalportfolio-macos</title>
+    <title>Terminal Portfolio</title>
+
+    <meta property="og:title" content="Terminal Portfolio" />
+    <meta property="og:description" content="Terminal Portfolio showcasing projects and skills macOS" />
+    <meta property="og:type" content="website" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
